--- a/css/style-wide.css
+++ b/css/style-wide.css
@@ -83,6 +83,7 @@
 						.box.post .info .date .month span
 						{
 							display: none;
+							font-size: 1.5em;
 						}
 					
 						.box.post .info .date .day
