--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -152,7 +152,7 @@
 		#logo a
 		{
 			display: block;
-			background-color: #c94663;
+			background-color: #34495E;
 			background-image: url('images/bg01.png');
 			padding: 0.875em 0.25em;
 			border-radius: 0.2em;
